--- a/Projet Web Commerce/Views/PPHistoriquePaiements/HistoriqueClient.cshtml
+++ b/Projet Web Commerce/Views/PPHistoriquePaiements/HistoriqueClient.cshtml
@@ -20,7 +20,7 @@
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Order Details</h5>
+                            <h5 class="card-title">Détails de la commande</h5>
                             <p class="card-text">NoCommande: @Html.DisplayFor(modelItem => item.NoCommande)</p>
                             <p class="card-text">Montant Avant Livraison: @Html.DisplayFor(modelItem => item.MontantVenteAvantLivraison)</p>
                             <p class="card-text">NoVendeur: @Html.DisplayFor(modelItem => item.NoVendeur)</p>
