fixed small issue

--- a/Projet Web Commerce/Views/Personnaliser/Index.cshtml
+++ b/Projet Web Commerce/Views/Personnaliser/Index.cshtml
@@ -83,7 +83,7 @@ else
                             {
                                 <p>Aucun</p>
                             }
-                            <input type="file" id="image" name="image" accept="image/*" class="form-control" />
+                            <input type="file" id="image" name="image" accept="image/jpeg" class="form-control" />
                         </div>
                     </div>
                     <div class="form-floating mb-3">
