--- a/Projet Web Commerce/Views/Messagerie/Details.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Details.cshtml
@@ -63,7 +63,7 @@
                             ? $"<strong>{destinataire.DestinataireUser.Email}</strong>" : "")))
                     </div>
                     <br />
-                    <div>
+                    <div style="white-space: pre-line;">
                         @Model.Message
                     </div>
                     <br />
