commencer courriel details

--- a/Projet Web Commerce/Views/PPProduits/Details.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Details.cshtml
@@ -14,6 +14,9 @@
     int numRating = 0;
 }
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
+
 @section scripts{
     <script type="text/javascript">
         function Etoiles(valeur) {
@@ -27,9 +30,72 @@
                 }
             }
         }
+
+        function envoyerCourriel(event, noProduit,nom,vendeur) {
+            // You can access event and noProduit here
+
+            var sujet = nom + ' - ' + noProduit;
+
+            Swal.fire({
+                title: 'Courriel à envoyer au vendeur',
+                html: `<input id="sujet" style="width:550;" class="swal2-input" value="${sujet}" readonly/>
+                        <textarea id="message" style="resize:none;width:550;height:200;" class="swal2-input" ></textarea>`,
+                showCancelButton: true,
+                confirmButtonText: 'Envoyer',
+                cancelButtonText: 'Annuler',
+                showLoaderOnConfirm: true,
+                width: '800px',
+                allowOutsideClick: () => !Swal.isLoading(),
+                preConfirm: () => {
+                    var url = "/PPGestionnairesController/ValiderAsync?" + $.param({ id: noVendeur, sujet: sujet, message: message, infosSupp: infosSupp.value, vendeurAccepte: accepte, pourcentageRedevence: pourcentageRedevence })
+                    return fetch(url)
+                        .then(response => {
+                            if (!response.ok) {
+                                throw new Error(response.statusText);
+                            }
+                            return response.json();
+                        })
+                        .then(data => {
+                            console.log('Response from ValiderWithNumber:', data);
+                        })
+                        .catch(error => {
+                            console.error('Error:', error);
+                            Swal.showValidationMessage('Validation failed');
+                        });
+                },
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Swal.fire({
+                        title: "Envoyé!",
+                        text: "Le courriel a été envoyé avec succès",
+                        icon: "success"
+                    }).then(() => {
+                        location.reload();
+                    });
+                }
+            });
+        }
     </script>
 }
 
+@if (User.IsInRole("Client"))
+{
+    <div onclick="envoyerCourriel(event, @Model.NoProduit, '@Model.Nom', @Model.NoVendeur)">
+        <p>Rejoindre le vendeur par courriel</p>
+        <svg fill="#000000" height="32px" width="32px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+             viewBox="0 0 75.294 75.294" xml:space="preserve">
+            <g>
+                <path d="M66.097,12.089h-56.9C4.126,12.089,0,16.215,0,21.286v32.722c0,5.071,4.126,9.197,9.197,9.197h56.9
+                c5.071,0,9.197-4.126,9.197-9.197V21.287C75.295,16.215,71.169,12.089,66.097,12.089z M61.603,18.089L37.647,33.523L13.691,18.089
+                H61.603z M66.097,57.206h-56.9C7.434,57.206,6,55.771,6,54.009V21.457l29.796,19.16c0.04,0.025,0.083,0.042,0.124,0.065
+                c0.043,0.024,0.087,0.047,0.131,0.069c0.231,0.119,0.469,0.215,0.712,0.278c0.025,0.007,0.05,0.01,0.075,0.016
+                c0.267,0.063,0.537,0.102,0.807,0.102c0.001,0,0.002,0,0.002,0c0.002,0,0.003,0,0.004,0c0.27,0,0.54-0.038,0.807-0.102
+                c0.025-0.006,0.05-0.009,0.075-0.016c0.243-0.063,0.48-0.159,0.712-0.278c0.044-0.022,0.088-0.045,0.131-0.069
+                c0.041-0.023,0.084-0.04,0.124-0.065l29.796-19.16v32.551C69.295,55.771,67.86,57.206,66.097,57.206z" />
+            </g>
+        </svg>
+    </div>
+}
 @if (!SignInManager.IsSignedIn(User) )
 {
     Console.WriteLine("yes");
