--- a/Projet Web Commerce/Views/PPProduits/Details.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Details.cshtml
@@ -12,6 +12,15 @@
 
     var vendeur = Model.PPVendeurs.NomAffaires;
     int numRating = 0;
+
+    int noVendeur = 0;
+    string emailDest = "";
+
+    if (Model.NoVendeur != null)
+    {
+        noVendeur = Model.NoVendeur;
+        emailDest = _context.PPVendeurs.Where(v => v.NoVendeur == noVendeur).FirstOrDefault().AdresseEmail;
+    }
 }
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
@@ -31,56 +40,58 @@
             }
         }
 
-        function envoyerCourriel(event, noProduit,nom,vendeur) {
+        function envoyerCourriel(noProduit, nom) {
             // You can access event and noProduit here
 
             var sujet = nom + ' - ' + noProduit;
 
-            Swal.fire({
-                title: 'Courriel à envoyer au vendeur',
-                html: `<input id="sujet" style="width:550;" class="swal2-input" value="${sujet}" readonly/>
-                        <textarea id="message" style="resize:none;width:550;height:200;" class="swal2-input" ></textarea>`,
-                showCancelButton: true,
-                confirmButtonText: 'Envoyer',
-                cancelButtonText: 'Annuler',
-                showLoaderOnConfirm: true,
-                width: '800px',
-                allowOutsideClick: () => !Swal.isLoading(),
-                preConfirm: () => {
-                    var url = "/PPGestionnairesController/ValiderAsync?" + $.param({ id: noVendeur, sujet: sujet, message: message, infosSupp: infosSupp.value, vendeurAccepte: accepte, pourcentageRedevence: pourcentageRedevence })
-                    return fetch(url)
-                        .then(response => {
-                            if (!response.ok) {
-                                throw new Error(response.statusText);
-                            }
-                            return response.json();
-                        })
-                        .then(data => {
-                            console.log('Response from ValiderWithNumber:', data);
-                        })
-                        .catch(error => {
-                            console.error('Error:', error);
-                            Swal.showValidationMessage('Validation failed');
-                        });
-                },
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    Swal.fire({
-                        title: "Envoyé!",
-                        text: "Le courriel a été envoyé avec succès",
-                        icon: "success"
-                    }).then(() => {
-                        location.reload();
-                    });
-                }
-            });
+            window.location.href = '@Url.Action("EnvoyerMessage", "Messagerie")' + '?emailDest=' + '@emailDest' + '&sujet=' + sujet;
+
+            // Swal.fire({
+            //     title: 'Courriel à envoyer au vendeur',
+            //     html: `<input id="sujet" style="width:550;" class="swal2-input" value="${sujet}" readonly/>
+            //             <textarea id="message" style="resize:none;width:550;height:200;" class="swal2-input" ></textarea>`,
+            //     showCancelButton: true,
+            //     confirmButtonText: 'Envoyer',
+            //     cancelButtonText: 'Annuler',
+            //     showLoaderOnConfirm: true,
+            //     width: '800px',
+            //     allowOutsideClick: () => !Swal.isLoading(),
+            //     preConfirm: () => {
+            //         var url = "/PPProduitsController/ValiderAsync?" + $.param({ noVendeur: @noVendeur, sujet: sujet, message: message })
+            //         return fetch(url)
+            //             .then(response => {
+            //                 if (!response.ok) {
+            //                     throw new Error(response.statusText);
+            //                 }
+            //                 return response.json();
+            //             })
+            //             .then(data => {
+            //                 console.log('Response from ValiderWithNumber:', data);
+            //             })
+            //             .catch(error => {
+            //                 console.error('Error:', error);
+            //                 Swal.showValidationMessage('Validation failed');
+            //             });
+            //     },
+            // }).then((result) => {
+            //     if (result.isConfirmed) {
+            //         Swal.fire({
+            //             title: "Envoyé!",
+            //             text: "Le courriel a été envoyé avec succès",
+            //             icon: "success"
+            //         }).then(() => {
+            //             location.reload();
+            //         });
+            //     }
+            // });
         }
     </script>
 }
 
 @if (User.IsInRole("Client"))
 {
-    <div onclick="envoyerCourriel(event, @Model.NoProduit, '@Model.Nom', @Model.NoVendeur)">
+    <div onclick="envoyerCourriel(@Model.NoProduit, '@Model.Nom')">
         <p>Rejoindre le vendeur par courriel</p>
         <svg fill="#000000" height="32px" width="32px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
              viewBox="0 0 75.294 75.294" xml:space="preserve">
