--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -127,7 +127,7 @@
 
                             <div class="d-flex justify-content-center flex-grow-1">
                                 <form method="post" class="d-flex mx-auto" asp-controller="MainMenu" asp-action="CatalogueTous" class="mx-3">
-                                    <input class="form-control me-2" name="searchString" id="searchString" type="search" placeholder="Search" aria-label="Search">
+                                    <input class="form-control me-2" name="searchString" id="searchString" type="search" placeholder="Rechercher" aria-label="Search">
                                     <button class="btn btn-secondary" type="submit">Rechercher</button> 
                                 </form>
                             </div>
