--- a/Projet Web Commerce/Views/PPProduits/Details.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Details.cshtml
@@ -32,10 +32,10 @@
             document.getElementById("newRating").value=valeur + 1
             for (var i = 0; i < 5; i++){
                 if (i <= valeur) {
-                    document.getElementById(i.toString()).src = "/Logo/iconeEtoileJaune.png"
+                    document.getElementById(i.toString()).src = "/data/images/iconeEtoileJaune.png"
                 }
                 else {
-                    document.getElementById(i.toString()).src = "/Logo/iconeEtoile.png"
+                    document.getElementById(i.toString()).src = "/data/images/iconeEtoile.png"
                 }
             }
         }
@@ -356,13 +356,13 @@ else
                     @for (int i = 0; i < numRating; i++)
                     {
                         <button onclick="Etoiles(@i)" style="border: 0; background-color:transparent">
-                            <img id="@i" src="~/Logo/iconeEtoileJaune.png" width="25" height="25" />
+                            <img id="@i" src="~/data/images/iconeEtoileJaune.png" width="25" height="25" />
                         </button>
                     }
                     @for (int i = numRating; i < 5; i++)
                     {
                         <button onclick="Etoiles(@i)" style="border: 0; background-color:transparent">
-                            <img id="@i" src="~/Logo/iconeEtoile.png" width="25" height="25" />
+                            <img id="@i" src="~/data/images/iconeEtoile.png" width="25" height="25" />
                         </button>
                     }
                     <br />
@@ -409,11 +409,11 @@ else
                             (Vous) @client.AdresseEmail
                             @for (int i = 0; i < cote; i++)
                             {
-                                <img src="~/Logo/iconeEtoileJaune.png" width="15" height="15" />
+                                <img src="~/data/images/iconeEtoileJaune.png" width="15" height="15" />
                             }
                             @for (int i = cote; i < 5; i++)
                             {
-                                <img src="~/Logo/iconeEtoile.png" width="15" height="15" />
+                                <img src="~/data/images/iconeEtoile.png" width="15" height="15" />
                             } :
                         </h6>
                         @if (evalClientActu.Commentaire != "" && evalClientActu.Commentaire != null)
