--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
@@ -60,7 +60,7 @@
                                         <th scope="col">Date de dernière commande</th>
                                         <th scope="col">Montant total avant taxes </th>
                                         <th scope="col">Supprimer Panier</th>
-                                        <th scope="col">Supprimer Client</th>
+                                        <th scope="col">Supprimer Vendeur</th>
                                         <th scope="col"></th>
                                     </tr>
                                 </thead>
