--- a/Projet Web Commerce/Views/Messagerie/EnvoyerMessage.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/EnvoyerMessage.cshtml
@@ -188,13 +188,13 @@
                                     </div>
                                     @* <div class="form-check" style="@(role == "gestionnaire" ? "display:inline" : "display:none")" id="divGestionnaire">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="chkTousLesVendeurs" onclick="ajouterToutLeMonde()">
+                                            <input class="form-check-input" type="checkbox" id="chkTousLesVendeurs" onclick="ajouterTousLesVendeurs()">
                                             <label class="form-check-label" for="chkTousLesVendeurs">
                                                 Envoyer à tous les vendeurs
                                             </label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="chkToutLesClients" onclick="ajouterToutLeMonde()">
+                                            <input class="form-check-input" type="checkbox" id="chkToutLesClients" onclick="ajouterTousLesClients()">
                                             <label class="form-check-label" for="chkToutLesClients">
                                                 Envoyer à tous les clients
                                             </label>
