--- a/Projet Web Commerce/Views/Panier/Index.cshtml
+++ b/Projet Web Commerce/Views/Panier/Index.cshtml
@@ -85,8 +85,8 @@
 
                                             var item = _context.PPProduits.FirstOrDefault(p => p.NoProduit == articles.NoProduit);
 
-
-                                            var path = System.IO.Path.Combine(env.WebRootPath, "data/images", item.Photo);
+                                            var nomImage = item.Photo != null ? item.Photo : "DefaultImage.png";
+                                            var path = System.IO.Path.Combine(env.WebRootPath, "data/images", nomImage);
                                             string imagePath = item.Photo != null && File.Exists(path) ? $"~/data/images/{item.Photo}" : "~/data/images/DefaultImage.png";
                                             Console.WriteLine("FILE Name : " + item.Photo);
                                             Console.WriteLine("FILE : " + File.Exists(path));
