--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -200,7 +200,7 @@
                                     var path = "";
                                     if (item.Photo != null)
                                     {
-                                        path = System.IO.Path.Combine(env.WebRootPath, "data/images", item.Photo);
+                                        path = System.IO.Path.Combine(env.WebRootPath, "data\\images", item.Photo);
                                     }
                                     
                                     string imagePath = item.Photo != null && File.Exists(path) ? $"~/data/images/{item.Photo}" : "~/data/images/DefaultImage.png";
