finished pdf recu design

--- a/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
@@ -72,8 +72,8 @@ else
 
             <div class="form-floating mb-3">
                 <select asp-for="Input.Tax" class="form-control" aria-required="true">
-                    <option value="True">Vrai</option>
-                    <option value="False">Faux</option>
+                    <option value="True">Oui</option>
+                    <option value="False">Non</option>
                 </select>
                 <label asp-for="Input.Tax">Client doit payer taxe?</label>
                 <span asp-validation-for="Input.Tax" class="text-danger"></span>
