--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -335,39 +335,42 @@
                         @if (Model.ProduitsList.HasPreviousPage)
                         {
                             <li class="page-item">
-                                <a class="page-link" href="@Url.Action("CatalogueVendeur", new {
-    sortOrder = Model.sortOrder,
-    pageNumber = Model.pageNumber - 1,
-    parPage = Model.parPage,
-    searchString = Model.searchString,
-    nomAffaire = Model.nomAffaire
-})">Précédent</a>
+                                <form id="prevForm" method="post" action="@Url.Action("CatalogueVendeur")">
+                                    <input type="hidden" name="sortOrder" value="@Model.sortOrder" />
+                                    <input type="hidden" name="pageNumber" value="@(Model.ProduitsList.PageIndex - 1)" />
+                                    <input type="hidden" name="parPage" value="@Model.parPage" />
+                                    <input type="hidden" name="searchString" value="@Model.searchString" />
+                                    <input type="hidden" name="nomAffaire" value="@Model.nomAffaire" />
+                                    <button type="submit" class="page-link">Précédent</button>
+                                </form>
                             </li>
                         }
 
                         @for (int i = 1; i <= Model.ProduitsList.TotalPages; i++)
                         {
                             <li class="page-item @(i == Model.ProduitsList.PageIndex ? "active" : "")">
-                                <a class="page-link" href="@Url.Action("CatalogueVendeur", new {
-    sortOrder = Model.sortOrder,
-    pageNumber = i,
-    parPage = Model.parPage,
-    searchString = Model.searchString,
-    nomAffaire = Model.nomAffaire
-})">@i</a>
+                                <form id="pageForm_@i" method="post" action="@Url.Action("CatalogueVendeur")">
+                                    <input type="hidden" name="sortOrder" value="@Model.sortOrder" />
+                                    <input type="hidden" name="pageNumber" value="@i" />
+                                    <input type="hidden" name="parPage" value="@Model.parPage" />
+                                    <input type="hidden" name="searchString" value="@Model.searchString" />
+                                    <input type="hidden" name="nomAffaire" value="@Model.nomAffaire" />
+                                    <button type="submit" class="page-link">@i</button>
+                                </form>
                             </li>
                         }
 
                         @if (Model.ProduitsList.HasNextPage)
                         {
                             <li class="page-item">
-                                <a class="page-link" href="@Url.Action("CatalogueVendeur", new {
-    sortOrder = Model.sortOrder,
-    pageNumber = Model.ProduitsList.PageIndex + 1,
-    parPage = Model.parPage,
-    searchString = Model.searchString,
-    nomAffaire = Model.nomAffaire
-})">Suivant</a>
+                                <form id="nextForm" method="post" action="@Url.Action("CatalogueVendeur")">
+                                    <input type="hidden" name="sortOrder" value="@Model.sortOrder" />
+                                    <input type="hidden" name="pageNumber" value="@(Model.ProduitsList.PageIndex + 1)" />
+                                    <input type="hidden" name="parPage" value="@Model.parPage" />
+                                    <input type="hidden" name="searchString" value="@Model.searchString" />
+                                    <input type="hidden" name="nomAffaire" value="@Model.nomAffaire" />
+                                    <button type="submit" class="page-link">Suivant</button>
+                                </form>
                             </li>
                         }
                     </ul>
