--- a/Projet Web Commerce/Views/PPProduits/Edit.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Edit.cshtml
@@ -50,8 +50,9 @@ else
                     <input asp-for="DateCreation" class="form-control" />
                     <span asp-validation-for="DateCreation" class="text-danger"></span>
                 </div>
-                @{                    
-                    var path = System.IO.Path.Combine(env.WebRootPath, "data/images", Model.Photo);
+                @{
+                    var nomImage = Model.Photo != null ? Model.Photo : "DefaultImage.png";
+                    var path = System.IO.Path.Combine(env.WebRootPath, "data/images", nomImage);
                     string imagePath = Model.Photo != null && File.Exists(path) ? $"~/data/images/{Model.Photo}" : "~/data/images/DefaultImage.png";
                     Console.WriteLine("FILE Name : " + Model.Photo);
                     Console.WriteLine("FILE : " + File.Exists(path));
@@ -60,6 +61,7 @@ else
                 <div class="form-group">
                     <label asp-for="Photo" class="control-label">Photo de l’article :</label>
                     <img src="@Url.Content(imagePath)" alt="@Model.Photo" width="140" height="200" />
+                     <br>
                     <input type="file" id="file" name="file" accept="image/*" class="form-control" />
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
